src/components/Profile/Profile.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);

.profile-container {
  margin-left: 20rem;
  padding: 0rem 1.5rem;
}

.profile-card {
  border-radius: 10px;
  background: var(--secondary-color);
  margin-bottom: 1.5rem;
  padding: 1rem 1rem 0rem 1rem;
  height: auto;
  box-shadow:
    0 20px 25px -5px rgba(0, 0, 0, 0.1),
    0 10px 10px -5px rgba(0, 0, 0, 0.04);
}

.profile-card .top-container {
  display: flex;
  gap: 1rem;
}

.profile-card .profile-photo {
  height: 6.1rem;
  width: 6.1rem;
  flex-shrink: 0;
}

.profile-photo img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

.profile-name {
  color: inherit;
  text-decoration: none;
}

.profile-name:hover {
  color: #00a6fb;
}

.profile-details {
  width: -webkit-fill-available;
  overflow: hidden;
}

.profile-details p {
  font-size: 14px;
}

.profile-details .skills-container {
  margin-top: 1rem;
  display: flex;
  gap: 1rem;
  height: 35px;
  overflow: hidden;
}

.skills-container:hover {
  overflow-x: scroll;
  scroll-behavior: auto;
}

.skills-container::-webkit-scrollbar {
  width: 10px;
  height: 5px;
}

.skills-container::-webkit-scrollbar-track {
  background: var(--secondary-color);
}

.skills-container::-webkit-scrollbar-thumb {
  background: var(--primary-color);
  border-radius: 5px;
}

.skills-container .skill {
  background-color: rgba(20, 29, 47, 1);
  padding: 0.25rem 0.5rem;
  border-radius: 5px;
  font-size: 0.875rem;
  white-space: nowrap;
  height: 30px;
  cursor: default;
  display: inline;
  color: #fff;
}

.profile-link, .profile-link-disabled {
  width: 10rem;
}

.profile-link a {
  text-decoration: none;
  color: #00a6fb;
}

.profile-link a:hover {
  text-decoration: underline;
}

.profile-link-disabled a {
  text-decoration: none;
  color: #00a6fb;
  filter: brightness(70%);
  cursor: not-allowed;
}

.bottom-container {
  margin-top: 1rem;
}

.bottom-container .social {
  display: flex;
  margin-top: 0.5rem;
}

.social .github,
.social .twitter,
.social .linkedin {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  margin-right: 2rem;
}

.social-link {
  text-decoration: none;
  color: #fff;
}

@media (max-width: 480px) {
  .skills-container .skill {
    height: 2rem;
  }
}

.social-container {
  width: 200px;
  margin: -10px;
  text-align: left;
}

.social-icons {
  padding: 1px 0px 0px 0px;
  list-style: none;
  margin: 0;
}

.social-icons li {
  display: inline-block;
  margin: 0;
  position: relative;
  font-size: 1.2em;
}

.social-icons i {
  color: #fff;
  position: absolute;
  top: 16px;
  left: 16.75px;
  transition: all 265ms ease-out;
}

.social-icons a:before {
  transform: scale(0.5);
  -ms-transform: scale(0.5);
  -webkit-transform: scale(0.5);
  content: ' ';
  width: 50px;
  height: 50px;
  border-radius: 15%;
  display: block;
  background: linear-gradient(45deg, #195c6c, #2727ff);
  transition: all 265ms ease-out;
}

.social-icons a:hover:before {
  transform: scale(0);
  transition: all 265ms ease-in;
  -webkit-tap-highlight-color: transparent; /* Add the WebKit-specific property to remove the border in safari browser*/
}

.social-icons a:hover i {
  transform: scale(2.25);
  -ms-transform: scale(2.25);
  -webkit-transform: scale(2.25);
  color: #0031b9;
  background: -webkit-linear-gradient(45deg, #1b58c9, #0daae9);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: all 265ms ease-in;
}

@media only screen and (max-width: 478px) {
  .social-icons i {
    top: 19px;
    left: 19.75px;
  }
}

/* Add this CSS to specifically target Safari */
@media screen and (-webkit-min-device-pixel-ratio: 0) {
  .social-icons i {
    -webkit-backface-visibility: hidden;
  }
}

